header, navbar styling coplete

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="./styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,8 +10,8 @@
 </head>
 
 <div class="header">
-    <div class="columns">
-        <ul class="menu">
+    <div>
+        <ul class="menu horizontal-align no-bullets">
             <li class="p-10">
                 <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Careers">Careers</a>
             </li>
@@ -18,34 +19,62 @@
                 <span class="black dot"></span>
             </li>
             <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Careers">Careers</a>
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Events">Events</a>
             </li>
             <li>
                 <span class="black dot"></span>
             </li>
             <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Careers">Careers</a>
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Investors">Investors</a>
             </li>
             <li>
                 <span class="black dot"></span>
-            </li>
-            <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Careers">Careers</a>
-            </li>
-            <li>
-                <span class="black dot"></span>
-            </li>
-            <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Careers">Careers</a>
             </li>
             <li>
                 <a class="black-vertical"></a>
             </li>
             <li>
-                <span class="globeLogo"></span>
+                <span>
+                    <img class="globeLogo" src="./assets/globe.png" alt="globe" title="worldwide">
+                </span>
+            </li>
+            <li class="p-10">
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Worldwide">Worldwide</a>
+            </li>
+            <li>
+                <span>
+                    <img class="searchLogo" src="http://cdn.onlinewebfonts.com/svg/img_158544.png" alt="search-button" title="search">
+                </span>
             </li>
         </ul>
     </div>
 </div>
+<div class="navBar">
+    <div class="row align-middle pd-1 jc-spaceBetween">
+        <div class="coulmns large-4 no-pd align-middle disp-flex">
+            <embed class="logo" type="image/svg+xml" src="./assets/logo.svg" />
+        </div>
+        <div class="coulmns large-8">
+            <ul class="no-bullets horizontal-align">
+                <li class="nav-items hide-at-tabView" title="Industries">Industries</li>
+                <li class="nav-items hide-at-tabView" title="Services">Services</li>
+                <li class="nav-items hide-at-tabView" title="Latest Thinking">Latest Thinking</li>
+                <li class="nav-items hide-at-tabView" title="About">About</li>
+                <li class="disp-flex">
+                    <img class="toggleBtn" src="./assets/toggle.png" alt="toggle">
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 
+<div class="disp-flex flex-dir-column section1">
+    <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
+        <div class="columns medium-10 large-6 z1 medium-pl3 pd-2"><img src="" alt="">
+                    <h1 class="h2 text-blue">Chaos to Catalyst</h1>
+            <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding position in your industry.</p>
+                <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW" data-attribute="homeBanner" class="button small hollow success" tabindex="0">SEE HOW<i class="arrow-right"></i></a>
+        </div>
+    </div>
+</div>
 </html>
