Caarousel section completed with all required media queries

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             </li>
             <li>
                 <span>
-                    <img class="searchLogo" src="http://cdn.onlinewebfonts.com/svg/img_158544.png" alt="search-button" title="search">
+                    <img class="searchLogo" src="http://cdn.onlinewebfonts.com/svg/img_158544.png" alt="search-button"
+                        title="search">
                 </span>
             </li>
         </ul>
@@ -67,14 +68,35 @@
         </div>
     </div>
 </div>
-
-<div class="disp-flex flex-dir-column section1">
-    <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
-        <div class="columns medium-10 large-6 z1 medium-pl3 pd-2"><img src="" alt="">
-                    <h1 class="h2 text-blue">Chaos to Catalyst</h1>
-            <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding position in your industry.</p>
-                <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW" data-attribute="homeBanner" class="button small hollow success" tabindex="0">SEE HOW<i class="arrow-right"></i></a>
+<div class="dummycarousel">
+    <div class="disp-flex flex-dir-column section1">
+        <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
+            <div class="columns medium-10 large-6 z1 medium-pl3 pd-2 sect1"><img src="" alt="">
+                <h1 class="h2 text-blue">Chaos to Catalyst</h1>
+                <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding
+                    position in your industry.</p>
+                <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW"
+                    data-attribute="homeBanner" class="button small hollow success" tabindex="0">SEE HOW<i
+                        class="arrow-right"></i></a>
+            </div>
         </div>
     </div>
+    <div class="carousel-li">
+        <ul class="carousel-progress disp-flex align-middle no-bullets">
+            <li class="active">
+                <button type="button" role="button"></button>
+            </li>
+            <li class="not-active">
+                <button type="button" role="button"></button>
+            </li>
+            <li class="not-active">
+                <button type="button" role="button"></button>
+            </li>
+            <li class="not-active">
+                <button type="button" role="button"></button>
+            </li>
+        </ul>
+    </div>
 </div>
+
 </html>
