--- a/index.html
+++ b/index.html
@@ -71,32 +71,54 @@
 <div class="dummycarousel">
     <div class="disp-flex flex-dir-column section1">
         <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
-            <div class="columns medium-10 large-6 z1 medium-pl3 pd-2 sect1"><img src="" alt="">
+            <div class="columns medium-10 large-6 medium-pl3 pd-2 sect1"><img src="" alt="">
                 <h1 class="h2 text-blue">Chaos to Catalyst</h1>
                 <p class="section1-p">Navigate the COVID-19 crisis and its aftermath, and emerge with a commanding
                     position in your industry.</p>
                 <a href="/covid-19-chaos-to-catalyst-helping-companies-emerge-stronger" title="SEE HOW"
-                    data-attribute="homeBanner" class="button small hollow success" tabindex="0">SEE HOW<i
+                    data-attribute="homeBanner" class="button small hollow success">SEE HOW<i
                         class="arrow-right"></i></a>
             </div>
         </div>
     </div>
     <div class="carousel-li">
         <ul class="carousel-progress disp-flex align-middle no-bullets">
-            <li class="active">
-                <button type="button" role="button"></button>
+            <li>
+                <button class="active" type="button" role="button"></button>
             </li>
-            <li class="not-active">
-                <button type="button" role="button"></button>
+            <li>
+                <button class="not-active" type="button" role="button"></button>
             </li>
-            <li class="not-active">
-                <button type="button" role="button"></button>
+            <li>
+                <button class="not-active" type="button" role="button"></button>
             </li>
-            <li class="not-active">
-                <button type="button" role="button"></button>
+            <li>
+                <button class="not-active" type="button" role="button"></button>
             </li>
         </ul>
     </div>
 </div>
+
+<div class="section-2 container bd-1 jc-spaceBetween disp-flex align-left column-block ">
+    <div class="imgBox">
+        <img src="./assets/img1.jpg" alt="">
+    </div>
+    <div class="content ovpd-1">
+        <div class="label uppercase bold mb-half">Analyst Accolade</div>
+        <h5 class="h5">Discover why Gartner named us a Magic Quadrant Leader</h5>
+        <p class="pd-small mb-half">Cognizant’s excellence in public cloud services revolves around our ability to deliver high-quality
+            professional and managed services that optimize the capabilities of the cloud platform.</p>
+        <a href="#" class="uppercase button fill-green small" title="Learn more"> <i>Learn More</i> </a>
+    </div>
+</div>
+<!-- <div class="row collapse">
+            <div class=" small-12 medium-4 large-3 columns medium-order-1 small-order-1 relative">
+                <img class="analyst-image medium-absolute" src="./assets/img1.jpg" alt="image One">
+            </div>
+            <div class="small-12 medium-8 large-9 columns medium-order-2 small-order-2 medium-p1 small-p1">
+                <div class="label uppercase bold mb-half">Analyst Accolade</div>
+            </div>
+        </div> -->
+
 
 </html>
