--- a/index.html
+++ b/index.html
@@ -7,25 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>webUI</title>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/8b8ce66fec.js" crossorigin="anonymous"></script>
 </head>
+
+
+<!-------------------------------------------------- HeADER+NAVBAR --------------------------------------------------------->
 
 <div class="header">
     <div>
         <ul class="menu horizontal-align no-bullets">
             <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Careers">Careers</a>
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Careers">Careers</a>
             </li>
             <li>
                 <span class="black dot"></span>
             </li>
             <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Events">Events</a>
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Events">Events</a>
             </li>
             <li>
                 <span class="black dot"></span>
             </li>
             <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Investors">Investors</a>
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Investors">Investors</a>
             </li>
             <li>
                 <span class="black dot"></span>
@@ -39,7 +44,7 @@
                 </span>
             </li>
             <li class="p-10">
-                <a href="#" data-attribute="topHeaderNavTag" class="text-black small" title="Worldwide">Worldwide</a>
+                <a href="#" data-attribute="topHeaderNavTag" class="text-black" title="Worldwide">Worldwide</a>
             </li>
             <li>
                 <span>
@@ -68,6 +73,12 @@
         </div>
     </div>
 </div>
+
+
+
+
+<!-------------------------------------------------- SECTION-1 --------------------------------------------------------->
+
 <div class="dummycarousel">
     <div class="disp-flex flex-dir-column section1">
         <div style="min-height:500px;" class="row flex-container align-middle align-left pd-2 wd-100">
@@ -99,6 +110,10 @@
     </div>
 </div>
 
+
+
+<!-------------------------------------------------- SECTION-2 --------------------------------------------------------->
+
 <div class="section-2 container bd-1 jc-spaceBetween disp-flex align-left column-block ">
     <div class="imgBox">
         <img src="./assets/img1.jpg" alt="">
@@ -106,12 +121,216 @@
     <div class="content ovpd-1">
         <div class="label uppercase bold mb-half">Analyst Accolade</div>
         <h5 class="h5">Discover why Gartner named us a Magic Quadrant Leader</h5>
-        <p class="pd-small mb-half">Cognizant’s excellence in public cloud services revolves around our ability to deliver high-quality
+        <p class="pd-small mb-half">Cognizant’s excellence in public cloud services revolves around our ability to
+            deliver high-quality
             professional and managed services that optimize the capabilities of the cloud platform.</p>
-        <a href="#" class="uppercase button fill-green small" title="Learn more"> <i>Learn More</i> </a>
+        <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Learn More</i> </a>
     </div>
 </div>
 
 
+
+<!-------------------------------------------------- SECTION-3 --------------------------------------------------------->
+
+<div class="section-3 disp-flex m-top-2 flex-dir-row mb-half">
+    <div class="single-box-1 bd-1 disp-flex flex-dir-column relative jc-center">
+        <div class="img-area disp-flex jc-center align-middle">
+            <img src="./assets/img2.jpg" alt="">
+        </div>
+        <div class="content ovpd-1">
+            <div class="label uppercase bold mb-half">SPECIAL REPORT</div>
+            <h5 class="h5 disp-flex">Responding to COVID-19</h5>
+            <p class="pd-small mb-half">
+                Keeping people healthy (and businesses running) requires three tools:
+                information, preparedness and compassion.
+            </p>
+            <a href="#" class="uppercase button fill-green green-hover small" title="Learn more"> <i>Learn More</i> </a>
+        </div>
+    </div>
+    <div class="single-box-2 bd-1 disp-flex flex-dir-column relative jc-center">
+        <div class="img-area disp-flex jc-center align-middle">
+            <img src="./assets/img3.jpg" alt="">
+        </div>
+        <div class="content ovpd-1">
+            <div class="label uppercase bold mb-half">PERSPECTIVES</div>
+            <h5 class="h5 disp-flex">Tomorrow’s jobs post covid</h5>
+            <p class="pd-small mb-half">
+                Across the U.S. the labor market has experienced a pandemic-induced course correction. Our Jobs of the
+                Future
+            </p>
+            <a href="#" class="uppercase button fill-green green-hover small" title="Learn more"> <i>Learn More</i> </a>
+        </div>
+    </div>
+
+</div>
+
+
+
+<!-------------------------------------------------- SECTION-4 --------------------------------------------------------->
+
+<div class="section-4 container bd-1 jc-spaceBetween disp-flex align-left column-block ">
+    <div class="content ovpd-1">
+        <div class="label uppercase bold mb-half">WHITEPAPERS</div>
+        <h5 class="h5">From chaos to catalyst</h5>
+        <p class="pd-small mb-half">Take a four-phased approach to managing the coronavirus chaos and transform the
+            shockwaves into a catalyst for positive change.</p>
+        <p class="pd-small mb-half">View the <a href="#">webinar</a> or read the report.</p>
+        <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Learn More</i> </a>
+    </div>
+    <div class="imgBox">
+        <img src="./assets/img4.jpg" alt="">
+    </div>
+</div>
+
+<!-------------------------------------------------- SECTION-5 --------------------------------------------------------->
+
+<div class="section-3 section-5 disp-flex m-top-2 flex-dir-row mb-half">
+    <div class="single-box-1 bd-1 disp-flex flex-dir-column relative jc-center">
+        <div class="img-area disp-flex jc-center align-middle">
+            <img src="./assets/img5.jpg" alt="">
+        </div>
+        <div class="content ovpd-1">
+            <div class="label uppercase bold mb-half">IOT/AI RESEARCH</div>
+            <h5 class="h5 disp-flex">S-M-A-R-IoT</h5>
+            <p class="pd-small mb-half">
+                When AI and IoT get smarter together, you get more actionable insights, better customer experiences,
+                improved security and new ways to monetize data.
+            </p>
+            <a href="#" class="uppercase button fill-green green-hover small" title="Learn more"> <i>Learn More</i> </a>
+        </div>
+    </div>
+    <div class="single-box-2 bd-1 disp-flex flex-dir-column relative jc-center">
+        <div class="img-area disp-flex jc-center align-middle">
+            <img src="./assets/img6.jpg" alt="">
+        </div>
+        <div class="content ovpd-1">
+            <div class="label uppercase bold mb-half">PERSPECTIVES</div>
+            <h5 class="h5 disp-flex">AI potential unleashed</h5>
+            <p class="pd-small mb-half">
+                As pressure mounts to embrace AI, many businesses struggle to find its true potential. To harness data
+                and deliver unique experiences.
+            </p>
+            <a href="#" class="uppercase button fill-green green-hover small" title="Learn more"> <i>Learn More</i> </a>
+        </div>
+    </div>
+
+</div>
+
+
+<!-------------------------------------------------- SECTION-6 --------------------------------------------------------->
+
+<div class="section-2 container bd-1 jc-spaceBetween disp-flex align-left column-block ">
+    <div class="imgBox">
+        <img src="./assets/img7.jpg" alt="">
+    </div>
+    <div class="content ovpd-1">
+        <div class="label uppercase bold mb-half">SPECIAL REPORT</div>
+        <h5 class="h5"></h5>
+        <p class="pd-small mb-half">What will the world look like in 2023? This special report looks at the impacts of
+            the virus.</p>
+        <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Explore</i> </a>
+    </div>
+</div>
+
+
+<!-------------------------------------------------- SECTION-7 --------------------------------------------------------->
+
+<div class="mb-half section-7 container bd-1 jc-spaceBetween disp-flex align-left column-block ">
+    <div class="imgBox">
+        <img class="ovpd-1" src="./assets/book.png" alt="">
+    </div>
+    <div class="content ovpd-1">
+        <h5 class="h5">Solving real human problems</h5>
+        <p class="pd-small mb-two">Today’s organizations need to do more than pursue the latest technologies. They need
+            to enhance the lives of people around the world.
+            the virus.</p>
+        <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Read 2019 annual
+                report</i> </a>
+    </div>
+</div>
+
+
+<!-------------------------------------------------- SECTION-8 --------------------------------------------------------->
+
+<div class="section-8 pd-2">
+    <div>
+        <h3 class="uppercase text-center mb-one h3">Press release</h3>
+    </div>
+    <div class="news-area disp-flex flex-wrap flex-dir-row align-middle jc-flexStart">
+        <div class="single-news">
+            <strong class="uppercase small text-grey">
+                june 29, 2020
+            </strong>
+            <div class="disp-flex">
+                <h5 class="newsHead5 disp-flex">
+                    Growing Pride in LGBT+ Communities
+                </h5>
+            </div>
+
+        </div>
+        <div class="single-news">
+            <strong class="uppercase small text-grey">
+                JUNE 24, 2020
+            </strong>
+            <h5 class="newsHead5 disp-flex">
+                Cognizant Named a Leading Provider of Guidewire Services to Insurers by Everest Group
+            </h5>
+        </div>
+        <div class="single-news">
+            <strong class="uppercase small text-grey">
+                june 29, 2020
+            </strong>
+            <h5 class="newsHead5 disp-flex">
+                Cognizant Collaborates on Verily's Nationwide Baseline COVID-19 Testing Program
+            </h5>
+        </div>
+        <div class="single-news">
+            <strong class="uppercase small text-grey">
+                june 29, 2020
+            </strong>
+            <h5 class="newsHead5 disp-flex">
+                Cognizant Completes Acquisition of Collaborative Solutions, One of the World’s Largest Workday Services
+                Partners
+            </h5>
+        </div>
+        <div class="single-news">
+            <strong class="uppercase small text-grey">
+                june 29, 2020
+            </strong>
+            <h5 class="newsHead5 disp-flex">
+                Cognizant Completes Acquisition of EI-Technologies, a Leading European Salesforce Platform Specialist
+            </h5>
+        </div>
+        <div class="single-news disp-flex jc-center align-end">
+            <a href="#" class="uppercase button btn-large green-hover fill-green small" title="Learn more"> <i>VIEW ALL
+                    PRESS
+                    RELEASES
+                </i> </a>
+        </div>
+    </div>
+</div>
+
+
+
+<!-------------------------------------------------- SECTION-9 --------------------------------------------------------->
+<div class="section-9 bg-blue disp-flex align-middle jc-center flex-dir-column pd-2 mb-two">
+    <div class="mb-half">
+        <i class="newspaper"></i>
+        <span class="uppercase text-white">press release</span> <span class="text-white date"> | 05.07.2020</span>
+    </div>
+    <h5 class="bold uppercase text-white mb-two">Cognizant Reports First Quarter 2020 Results</h5>
+    <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Read more</i> </a>
+</div>
+
+
+<!-------------------------------------------------- SECTION-10 --------------------------------------------------------->
+<div class="section-10 pd-3 bg-grey">
+    <div class="text-center align-middle">
+        <h3 class="uppercase h3 text-blue">latest thinking</h3>
+    </div>
+    <div class="news-area disp-flex flex-wrap flex-dir-row align-middle jc-flexStart">
+
+    </div>
+</div>
 
 </html>
