--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
             </h5>
         </div>
         <div class="single-news disp-flex jc-center align-end">
-            <a href="#" class="uppercase button btn-large green-hover fill-green small" title="Learn more"> <i>VIEW ALL
+            <a href="#" class="uppercase button btn-large green-hover fill-green small z-0" title="Learn more"> <i>VIEW
+                    ALL
                     PRESS
                     RELEASES
                 </i> </a>
@@ -319,17 +320,104 @@
         <span class="uppercase text-white">press release</span> <span class="text-white date"> | 05.07.2020</span>
     </div>
     <h5 class="bold uppercase text-white mb-two">Cognizant Reports First Quarter 2020 Results</h5>
-    <a href="#" class="uppercase button green-hover fill-green small" title="Learn more"> <i>Read more</i> </a>
+    <a href="#" class="uppercase button green-hover fill-green small z-0" title="Learn more"> <i>Read more</i> </a>
 </div>
 
 
 <!-------------------------------------------------- SECTION-10 --------------------------------------------------------->
-<div class="section-10 pd-3 bg-grey">
-    <div class="text-center align-middle">
-        <h3 class="uppercase h3 text-blue">latest thinking</h3>
-    </div>
-    <div class="news-area disp-flex flex-wrap flex-dir-row align-middle jc-flexStart">
-
+<div class="section-10 bg-grey pd-3">
+    <h3 class="uppercase bold text-blue text-center mb-one">latest thinking</h3>
+    <div class="imgArea disp-flex flex-wrap flex-dir-row align-middle jc-flexStart margin-l1">
+        <div class="single-img-section-10 over m-1 bd-1 disp-flex flex-dir-column">
+            <div class="custom-label label uppercase mb-large">perspectives</div>
+            <div class="newsHead5 ovpd-1">
+                Reduce the cost and burden of trades...
+            </div>
+            <p class="ovpd-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, atque?...</p>
+            <hr class="hr">
+            <div class="contact-logo disp-flex pd-small flex-dir-row pd-1">
+                <i class="far fa-envelope"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
+        <div class="single-img-section-10 m-1 bd-1 disp-flex flex-dir-column">
+            <div class="custom-label label uppercase mb-large">perspectives</div>
+            <div class="newsHead5 ovpd-1">
+                Reduce the cost and burden of trades...
+            </div>
+            <p class="ovpd-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, atque?...</p>
+            <hr class="hr">
+            <div class="contact-logo disp-flex pd-small flex-dir-row pd-1">
+                <i class="far fa-envelope"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
+        <div class="single-img-section-10 m-1 bd-1 disp-flex flex-dir-column">
+            <div class="custom-label label uppercase mb-large">perspectives</div>
+            <div class="newsHead5 ovpd-1">
+                Reduce the cost and burden of trades...
+            </div>
+            <p class="ovpd-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, atque?...</p>
+            <hr class="hr">
+            <div class="contact-logo disp-flex pd-small flex-dir-row pd-1">
+                <i class="far fa-envelope"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
+        <div class="single-img-section-10 m-1 bd-1 disp-flex flex-dir-column">
+            <div class="custom-label label uppercase mb-large">perspectives</div>
+            <div class="newsHead5 ovpd-1">
+                Reduce the cost and burden of trades...
+            </div>
+            <p class="ovpd-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, atque?...</p>
+            <hr class="hr">
+            <div class="contact-logo disp-flex pd-small flex-dir-row pd-1">
+                <i class="far fa-envelope"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
+        <div class="single-img-section-10 m-1 bd-1 disp-flex flex-dir-column">
+            <div class="custom-label label uppercase mb-large">perspectives</div>
+            <div class="newsHead5 ovpd-1">
+                Reduce the cost and burden of trades...
+            </div>
+            <p class="ovpd-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, atque?...</p>
+            <hr class="hr">
+            <div class="contact-logo disp-flex pd-small flex-dir-row pd-1">
+                <i class="far fa-envelope"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
+        <div class="single-img-section-10 m-1 bd-1 disp-flex flex-dir-column">
+            <div class="custom-label label uppercase mb-large">perspectives</div>
+            <div class="newsHead5 ovpd-1">
+                Reduce the cost and burden of trades...
+            </div>
+            <p class="ovpd-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, atque?...</p>
+            <hr class="hr">
+            <div class="contact-logo disp-flex pd-small flex-dir-row pd-1">
+                <i class="far fa-envelope"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
     </div>
 </div>
 
