--- a/index.html
+++ b/index.html
@@ -419,6 +419,30 @@
             </div>
         </div>
     </div>
+    <div class="carousel-li">
+        <ul class="carousel-progress disp-flex align-middle no-bullets">
+            <li>
+                <button class="active" type="button" role="button"></button>
+            </li>
+            <li>
+                <button class="not-active" type="button" role="button"></button>
+            </li>
+            <li>
+                <button class="not-active" type="button" role="button"></button>
+            </li>
+            <li>
+                <button class="not-active" type="button" role="button"></button>
+            </li>
+        </ul>
+    </div>
 </div>
+
+
+
+<!-------------------------------------------------- SECTION-11 --------------------------------------------------------->
+<div class="section-11">
+    <h3 class="uppercase bold text-blue text-center mb-one">digitally cognizants</h3>
+</div>
+
 
 </html>
